syntax = "proto3";

package NUgc.NSchema;

import "google/protobuf/timestamp.proto";

message TFavoriteNews {
    string Id = 1;  // collections card_id
    string Url = 2;
    google.protobuf.Timestamp Time = 3;
    string ParentId = 4; // source card id
}
